--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ url: "https://radon99.github.io" # the base hostname & protocol for your site, e
 
 # Build settings
 #theme: jekyll-theme-simplex
-remote_theme: andreondra/simplex-demo
+remote_theme: andreondra/jekyll-theme-simplex
 plugins:
   - jekyll-feed
 
