--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://radon99.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
-#theme: jekyll-theme-simplex
-remote_theme: andreondra/jekyll-theme-simplex
+theme: jekyll-theme-simplex
+#remote_theme: andreondra/jekyll-theme-simplex
 plugins:
   - jekyll-feed
 
@@ -53,6 +53,9 @@ plugins:
 
 logo_img: /assets/img/icons/logo.png #Absolute path to the logo. If not specified, the title will be displayed instead.
 copyright: © Golasowski 2021, icons by Flaticon.com #Your copyright.
+
+sass:
+    style: compressed
 
 collections:
     category:
