--- a/_config.yml
+++ b/_config.yml
@@ -26,11 +26,11 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://radon99.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
-theme: jekyll-theme-simplex
-#remote_theme: andreondra/jekyll-theme-simplex
+#theme: jekyll-theme-simplex
+remote_theme: andreondra/jekyll-theme-simplex
 plugins:
   - jekyll-feed
-
+  - jekyll-remote-theme
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
