--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,11 @@ description:   |
   정상훈의 개발 프로젝트와 기술 작업물을 담은 포트폴리오 사이트입니다. <br>
   임베디드, AI, 하드웨어 등 다양한 프로젝트를 확인해보세요! <br>
   🚀💻⚙️
+  <div class='sx-button'>
+  <a href='https://github.com/radon99/radon99.github.io/tree/main/projects' target="_blank">
+    <img src='/assets/img/icons/github.png' style="width: auto; max-height: 50px;" />
+  </a>
+  </div>
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://radon99.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
