--- a/_data/nav.yaml
+++ b/_data/nav.yaml
@@ -16,6 +16,9 @@
       - title: MATLAB #Submenu item title.
         url: category/matlab.html #Submenu item url.
         hue: "var(--c-themeHueOrange)" #Submenu item hue.
+      - title: Linux BSP #Submenu item title.
+        url: category/bsp.html #Submenu item url.
+        hue: "var(--c-themeHueOrange)" #Submenu item hue.
 #- title: Design
 #  url: category/design.html
 #  icon: assets/img/icons/paint_brush.svg
